[gd_scene load_steps=18 format=3 uid="uid://cx2gycrxks36j"]

[ext_resource type="Script" path="res://scripts/main_game_scripts/grow_up.gd" id="1_gegkd"]
[ext_resource type="Texture2D" uid="uid://b7u6t01tm12vc" path="res://images/transition_img_long.png" id="2_h16gn"]
[ext_resource type="Texture2D" uid="uid://bju4ckn3irgd0" path="res://UI stuff/Green Palette/ui_green_box.png" id="3_rs70k"]
[ext_resource type="Shader" path="res://shaders/voronoi.gdshader" id="4_ebynq"]
[ext_resource type="Theme" uid="uid://c6pbhcyqdefqk" path="res://themes/monospace_font.tres" id="5_vbb43"]
[ext_resource type="Script" path="res://scripts/grow_btn.gd" id="6_uagaw"]
[ext_resource type="Texture2D" uid="uid://gm3ltp1h1ihb" path="res://icons/arrow-up-square-fill.svg" id="6_xppkq"]
[ext_resource type="Script" path="res://scripts/grow_up_sprite_setup.gd" id="7_15xwp"]
[ext_resource type="Script" path="res://scripts/grow_up_continue_btn.gd" id="8_m0sd6"]
[ext_resource type="Script" path="res://scripts/sfx_man.gd" id="10_14mdh"]

[sub_resource type="Gradient" id="Gradient_v4l4s"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0.627451, 0.501961, 1, 1, 0.87451, 0.501961, 1, 0.647059, 0.831373, 0.415686, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_d4a18"]
radius = 100.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w2jld"]
shader = ExtResource("4_ebynq")
shader_parameter/color = Vector4(0, 0, 0, 1)
shader_parameter/pixel_size = 5.0
shader_parameter/scale = 0.5
shader_parameter/speed = 0.05
shader_parameter/brightness = 1.0
shader_parameter/opacity = 0.15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p40ms"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sunnm"]
bg_color = Color(0.865294, 0.372259, 0.373089, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="LabelSettings" id="LabelSettings_di502"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_0wk48"]
font_size = 32

[node name="GrowUp" type="Node2D" node_paths=PackedStringArray("creature_container", "current_sprite", "next_sprite", "shader_area", "display_box", "progress_bar_container", "bar", "area2d")]
script = ExtResource("1_gegkd")
creature_container = NodePath("UI/Creature")
current_sprite = NodePath("UI/Creature/Current")
next_sprite = NodePath("UI/Creature/Next")
shader_area = NodePath("UI/DisplayBox/shader")
display_box = NodePath("UI/DisplayBox")
progress_bar_container = NodePath("UI/ProgressBarContainer")
bar = NodePath("UI/ProgressBarContainer/Bar")
bar_progress_color = SubResource("Gradient_v4l4s")
area2d = NodePath("CanvasLayer/Area2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Area2D" type="Area2D" parent="CanvasLayer"]
position = Vector2(270, 270)
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
z_index = 2
shape = SubResource("CircleShape2D_d4a18")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TransLayer" type="CanvasLayer" parent="UI"]
layer = 10

[node name="Transition" type="Sprite2D" parent="UI/TransLayer"]
position = Vector2(270, 1200)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_h16gn")

[node name="BG" type="NinePatchRect" parent="UI"]
offset_right = 1080.0
offset_bottom = 1350.0
scale = Vector2(0.5, 0.5)
mouse_filter = 1
texture = ExtResource("3_rs70k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="DisplayBox" type="NinePatchRect" parent="UI"]
anchors_preset = -1
anchor_bottom = 0.335044
offset_left = 472.0
offset_top = 442.0
offset_right = 1288.0
offset_bottom = 958.845
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rs70k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="whiteBg" type="ColorRect" parent="UI/DisplayBox"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.313594
offset_left = 16.0
offset_top = 16.0
offset_right = 800.0
offset_bottom = 494.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="shader" type="ColorRect" parent="UI/DisplayBox"]
material = SubResource("ShaderMaterial_w2jld")
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.313594
offset_left = 16.0
offset_top = 16.0
offset_right = 800.0
offset_bottom = 494.0
mouse_filter = 2
color = Color(1, 1, 1, 0.270588)
metadata/_edit_use_anchors_ = true

[node name="TitleContainer" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="TitleBox" type="NinePatchRect" parent="UI/TitleContainer"]
layout_mode = 0
offset_left = 448.0
offset_top = 144.0
offset_right = 1162.0
offset_bottom = 270.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rs70k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="UI/TitleContainer/TitleBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 698.0
offset_bottom = 110.0
color = Color(0, 0, 0, 0.388235)
metadata/_edit_use_anchors_ = true

[node name="SelectTitle" type="RichTextLabel" parent="UI/TitleContainer"]
layout_mode = 0
offset_left = 100.0
offset_top = 95.0
offset_right = 439.0
offset_bottom = 135.0
theme = ExtResource("5_vbb43")
bbcode_enabled = true
text = "[font_size=25][center][wave amp=30 freq=-3]Grow up!"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="DescContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="EggDescBox" type="NinePatchRect" parent="UI/DescContainer"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.4125
anchor_bottom = 5.0125
offset_left = 446.0
offset_top = 573.0
offset_right = 1160.0
offset_bottom = 740.0
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rs70k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="UI/DescContainer/EggDescBox"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.459807
offset_left = 16.0
offset_top = 16.0
offset_right = 698.0
offset_bottom = 151.0
color = Color(0, 0, 0, 0.388235)
metadata/_edit_use_anchors_ = true

[node name="EggDesc" type="RichTextLabel" parent="UI/DescContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = -0.375
anchor_bottom = -0.075
offset_left = 98.0
offset_top = 504.0
offset_right = 439.0
offset_bottom = 564.0
theme = ExtResource("5_vbb43")
bbcode_enabled = true
text = "[center]Your creature is ready to grow up!"
metadata/_edit_use_anchors_ = true

[node name="ProgressBarContainer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Icon" type="Control" parent="UI/ProgressBarContainer"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 171.0
offset_top = 551.44
offset_right = 199.0
offset_bottom = 551.44
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="UI/ProgressBarContainer/Icon"]
modulate = Color(0.96, 0.96, 0.96, 1)
position = Vector2(10.008, 0)
scale = Vector2(0.688, 0.688)
texture = ExtResource("6_xppkq")

[node name="Bar" type="ProgressBar" parent="UI/ProgressBarContainer"]
clip_contents = true
custom_minimum_size = Vector2(160, 23)
layout_mode = 0
offset_left = 202.008
offset_top = 540.0
offset_right = 362.008
offset_bottom = 563.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_p40ms")
theme_override_styles/fill = SubResource("StyleBoxFlat_sunnm")
max_value = 1000.0
step = 1.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="GrowBtn" type="NinePatchRect" parent="UI"]
offset_left = 202.0
offset_top = 562.5
offset_right = 452.0
offset_bottom = 652.5
scale = Vector2(0.5, 0.5)
mouse_filter = 0
texture = ExtResource("3_rs70k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("6_uagaw")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/GrowBtn"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.08
anchor_bottom = 0.2
offset_left = 16.0
offset_top = 16.0
offset_right = 214.0
offset_bottom = 56.0
theme = ExtResource("5_vbb43")
text = "Continue"
label_settings = SubResource("LabelSettings_di502")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Creature" type="Node2D" parent="UI"]
script = ExtResource("7_15xwp")

[node name="Current" type="AnimatedSprite2D" parent="UI/Creature"]
scale = Vector2(0.225, 0.225)
animation = &"idle"

[node name="Next" type="AnimatedSprite2D" parent="UI/Creature"]
scale = Vector2(0.225, 0.225)

[node name="ConfettiLayer" type="CanvasLayer" parent="UI"]
unique_name_in_owner = true
layer = 5

[node name="ContinueBtn" type="NinePatchRect" parent="UI"]
visible = false
offset_left = 202.0
offset_top = 563.0
offset_right = 452.0
offset_bottom = 653.0
scale = Vector2(0.5, 0.5)
mouse_filter = 0
texture = ExtResource("3_rs70k")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("8_m0sd6")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/ContinueBtn"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.08
anchor_bottom = 0.2
offset_left = 16.0
offset_top = 16.0
offset_right = 214.0
offset_bottom = 56.0
theme = ExtResource("5_vbb43")
text = "Continue"
label_settings = SubResource("LabelSettings_0wk48")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
max_polyphony = 6
bus = &"SFX"
script = ExtResource("10_14mdh")

[connection signal="input_event" from="CanvasLayer/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="gui_input" from="UI/GrowBtn" to="UI/GrowBtn" method="_on_gui_input"]
[connection signal="gui_input" from="UI/ContinueBtn" to="UI/ContinueBtn" method="_on_gui_input"]
